WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190478
iOS: Scrolling using the arrow keys doesn't show the scroll indicator like it does on macOS
https://bugs.webkit.org/show_bug.cgi?id=190478
Summary
iOS: Scrolling using the arrow keys doesn't show the scroll indicator like it...
Tim Horton
Reported
2018-10-11 13:09:34 PDT
iOS: Scrolling using the arrow keys doesn't show the scroll indicator like it does on macOS
Attachments
Patch
(2.68 KB, patch)
2018-10-11 13:16 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-10-11 13:16:44 PDT
Created
attachment 352070
[details]
Patch
Tim Horton
Comment 2
2018-10-11 13:16:47 PDT
<
rdar://problem/22194031
>
WebKit Commit Bot
Comment 3
2018-10-11 16:51:16 PDT
Comment on
attachment 352070
[details]
Patch Clearing flags on attachment: 352070 Committed
r237056
: <
https://trac.webkit.org/changeset/237056
>
WebKit Commit Bot
Comment 4
2018-10-11 16:51:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug