iOS: Scrolling using the arrow keys doesn't show the scroll indicator like it does on macOS https://bugs.webkit.org/show_bug.cgi?id=190478 <rdar://problem/22194031>

Reviewed by Megan Gardner.

* Platform/spi/ios/UIKitSPI.h:
Add some SPI.

* UIProcess/ios/WKKeyboardScrollingAnimator.mm:
(-[WKKeyboardScrollViewAnimator scrollToContentOffset:animated:]):
Do a persistent flash when scrolling continuously.

(-[WKKeyboardScrollViewAnimator scrollWithScrollToExtentAnimationTo:]):
Do a single flash when doing a scroll-to-top/bottom.


Canonical link: https://commits.webkit.org/205430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237056 268f45cc-cd09-0410-ab3c-d52691b4dbfc